<resources>
    <string name="app_name">Sunami</string>
    <string name="title_activity_main">Your Music</string>
    <string name="title_side_fragment">Up Next</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="preference_file_key">JpUc58Z55TjrRjW9zT77tT3r6X6Or7TT</string>
    <string name="saved_db_status">isPopulated</string>
    <string name="user_learn_drawer">isDrawerLearned</string>
    <string name="search_hint">Search</string>

    <string name="pref_song_cycle">Set song cycle</string>
    <string name="pref_song_cycle_summary">Song cycle is the minimum amount of time before songs will be repeated</string>
    <string name="pref_smart_enabled">Smart shuffle enabled</string>
    <string name="pref_smart_enabled_summary">Songs will be hand selected based on your listening history</string>
    <string name="pref_soundcloud_enabled">Soundcloud integration enabled</string>
    <string name="pref_soundcloud_enabled_summary">Search and play songs from Soundcloud over the internet</string>
    <string name="pref_wifi_only">Over wifi only</string>
    <string name="pref_wifi_only_summary">Enable Soundcloud integration only when connected to a wifi network</string>

    <string name="pref_player">Smart Shuffle</string>
    <string name="pref_soundcloud">Soundcloud</string>

</resources>
